添加eureka server组件，配置hello-demo服务访问eureka

--- a/hello-demo/src/main/resources/application.properties
+++ b/hello-demo/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 management.security.enabled = false
 endpoints.shutdown.enabled = true
+
+spring.application.name=hello-service
+
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
