配置双节点Eureka服务器

--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=1111
 
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+#eureka.instance.hostname=localhost
+#配置为分布式注册中心时，下面两个属性必须显示地配置为true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 #eureka.client.service-url.defaultZone=http://localhost:1111/eureka/
